--- a/Hub/CSS/style.css
+++ b/Hub/CSS/style.css
@@ -491,22 +491,22 @@ button {
 /*Blog Card Images*/
 
 .card-image-1{
-    background-image: url(./Hub/CSS/Images/pexels-pixabay-355935.jpg);
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-pixabay-355935.jpg);
 }
 /*Photo by Pixabay from Pexels*/
 
 .card-image-2{
-    background-image: url(./Hub/CSS/Images/pexels-junior-teixeira-2047905.jpg);
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-junior-teixeira-2047905.jpg);
 }
 /*Photo by Junior Teixeira from Pexels*/
 
 .card-image-3{
-    background-image: url(./Hub/CSS/Images/pexels-ivan-samkov-7621142.jpg);
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-ivan-samkov-7621142.jpg);
 }
 /*Photo by Ivan Samkov from Pexel*/
 
 .card-image-4{
-    background-image: url(./Hub/CSS/Images/pexels-jess-bailey-designs-3663314.jpg);
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-jess-bailey-designs-3663314.jpg);
 }
 /*Photo by Jess Bailey Designs from Pexels*/
 
