--- a/Hub/CSS/style.css
+++ b/Hub/CSS/style.css
@@ -510,13 +510,17 @@ button {
 .card-image-3{
     background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-ivan-samkov-7621142.jpg);
 }
-/*Photo by Ivan Samkov from Pexel*/
+/*Photo by Ivan Samkov from Pexels*/
 
 .card-image-4{
     background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-jess-bailey-designs-3663314.jpg);
 }
 /*Photo by Jess Bailey Designs from Pexels*/
 
+.card-image-5{
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-francesco-ungaro-6232977.jpg);
+}
+/*Photo by Francesco Ungaro from Pexels*/
 
 /*About Menu*/
 
