--- a/Hub/CSS/style.css
+++ b/Hub/CSS/style.css
@@ -518,6 +518,11 @@ button {
 /*Photo by Jess Bailey Designs from Pexels*/
 
 .card-image-5{
+    background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/_A2A0285.jpg);
+}
+/*Photo by Alex Lau*/
+
+.card-image-6{
     background-image: url(https://inrahus.github.io/WSOA4175A_1827518/Hub/CSS/Images/pexels-francesco-ungaro-6232977.jpg);
 }
 /*Photo by Francesco Ungaro from Pexels*/
